Yangilanishlar: server sozlamalari qo'shildi

--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -15,7 +15,7 @@ upstream edushare_app {
 server {
     listen 80;
     listen [::]:80;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name edushare.uz www.edushare.uz;
 
     # Let's Encrypt validation
     location /.well-known/acme-challenge/ {
@@ -32,12 +32,13 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name edushare.uz www.edushare.uz;
 
     # SSL certificates (Let's Encrypt)
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/yourdomain.com/chain.pem;
+    # Eslatma: certbot ishga tushgandan keyin bu yo'llar avtomatik to'g'irlanadi yoki yaratiladi
+    ssl_certificate /etc/letsencrypt/live/edushare.uz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/edushare.uz/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/edushare.uz/chain.pem;
 
     # SSL configuration - A+ rating
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -80,7 +81,7 @@ server {
 
     # Static files
     location /static/ {
-        alias /home/kali/Desktop/projects/Django/edushare_production/staticfiles/;
+        alias /var/www/edushare/staticfiles/;
         expires 30d;
         add_header Cache-Control "public, immutable";
         access_log off;
@@ -88,21 +89,21 @@ server {
 
     # Media files
     location /media/ {
-        alias /home/kali/Desktop/projects/Django/edushare_production/media/;
+        alias /var/www/edushare/media/;
         expires 7d;
         add_header Cache-Control "public";
     }
 
     # Favicon
     location = /favicon.ico {
-        alias /home/kali/Desktop/projects/Django/edushare_production/staticfiles/assets/favicon.ico;
+        alias /var/www/edushare/staticfiles/assets/favicon.ico;
         access_log off;
         log_not_found off;
     }
 
     # Robots.txt
     location = /robots.txt {
-        alias /home/kali/Desktop/projects/Django/edushare_production/staticfiles/robots.txt;
+        alias /var/www/edushare/staticfiles/robots.txt;
         access_log off;
         log_not_found off;
     }
