--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -35,7 +35,6 @@ server {
     server_name edushare.uz www.edushare.uz;
 
     # SSL certificates (Let's Encrypt)
-    # Eslatma: certbot ishga tushgandan keyin bu yo'llar avtomatik to'g'irlanadi yoki yaratiladi
     ssl_certificate /etc/letsencrypt/live/edushare.uz/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/edushare.uz/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/edushare.uz/chain.pem;
@@ -49,13 +48,12 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
 
-    # Security headers
+    # Security headers (CSP Django tomonidan boshqariladi)
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://code.jquery.com; style-src 'self' 'unsafe-inline' https://stackpath.bootstrapcdn.com https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com;" always;
 
     # Logging
     access_log /var/log/nginx/edushare-access.log;
@@ -66,10 +64,10 @@ server {
     client_body_buffer_size 128k;
 
     # Timeouts
-    client_body_timeout 60;
+    client_body_timeout 300;
     client_header_timeout 60;
     keepalive_timeout 15;
-    send_timeout 60;
+    send_timeout 300;
 
     # Gzip compression
     gzip on;
@@ -87,11 +85,19 @@ server {
         access_log off;
     }
 
-    # Media files
-    location /media/ {
+    # Media fayllar - Himoyalangan (X-Accel-Redirect uchun)
+    location /protected_media/ {
+        internal;
         alias /home/react-edu-share-production/media/;
-        expires 7d;
-        add_header Cache-Control "public";
+    }
+
+    # Asosiy media yo'nalishi (Django orqali kiriladi)
+    location /media/ {
+        proxy_pass http://edushare_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Favicon
@@ -121,6 +127,24 @@ server {
         proxy_redirect off;
     }
 
+    # AI Chat endpoint - longer timeout for AI responses
+    location /api/ai-chat/ {
+        limit_req zone=api burst=5 nodelay;
+        limit_req_status 429;
+
+        proxy_pass http://edushare_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+
+        # AI responses can take 30-60 seconds
+        proxy_read_timeout 120;
+        proxy_connect_timeout 30;
+        proxy_send_timeout 30;
+    }
+
     # API endpoints - moderate rate limiting
     location /api/ {
         limit_req zone=api burst=10 nodelay;
@@ -146,7 +170,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         
-        # Websocket support (agar kerak bo'lsa)
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -154,12 +177,6 @@ server {
 
     # Block access to sensitive files
     location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    location ~ ~$ {
         deny all;
         access_log off;
         log_not_found off;
